# c-homework2

./: CMakeLists.txt  ip_address.txt  main.cpp
.github/workflows/: release.yml
